corpus/pandas/1.5.3/reference/index.md
{{ header }}

.. _api:

=============
API reference
=============

This page gives an overview of all public pandas objects, functions and
methods. All classes and functions exposed in ``pandas.*`` namespace are public.

Some subpackages are public which include ``pandas.errors``,
``pandas.plotting``, and ``pandas.testing``. Public functions in
``pandas.io`` and ``pandas.tseries`` submodules are mentioned in
the documentation. ``pandas.api.types`` subpackage holds some
public functions related to data types in pandas.

    The ``pandas.core``, ``pandas.compat``, and ``pandas.util`` top-level modules are PRIVATE. Stable functionality in such modules is not guaranteed.

.. If you update this toctree, also update the manual toctree in the
   main index.rst.template

   io
   general_functions
   series
   frame
   arrays
   indexing
   offset_frequency
   window
   groupby
   resampling
   style
   plotting
   options
   extensions
   testing

.. This is to prevent warnings in the doc build. We don't want to encourage
.. these methods.

..

        api/pandas.Index.asi8
        api/pandas.Index.holds_integer
        api/pandas.Index.is_type_compatible
        api/pandas.Index.nlevels
        api/pandas.Index.sort

.. Can't convince sphinx to generate toctree for this class attribute.
.. So we do it manually to avoid a warning

..

        api/pandas.api.extensions.ExtensionDtype.na_value
